@@ -2,7 +2,7 @@ from esc import NUL
 import esccmd
 import escio
 import esclog
-from escutil import AssertEQ, AssertScreenCharsInRectEqual, AssertTrue, GetScreenSize, knownBug
+from escutil import AssertEQ, AssertScreenCharsInRectEqual, AssertTrue, GetScreenSize, knownBug, vtLevel
 from esctypes import Point, Rect
 
 class DECDSRTests(object):
@@ -21,6 +21,7 @@ class DECDSRTests(object):
   # introduced, so I'm not sure it makes sense to test it in a term that
   # returns a lower VT level. I plan to go back and update all the tests for
   # different VT level capabilities.
+  @vtLevel(3)
   def test_DECDSR_DECXCPR(self):
     """DECXCPR reports the cursor position. Response is:
     CSI ? Pl ; Pc ; Pr R
@@ -43,6 +44,7 @@ class DECDSRTests(object):
     else:
       AssertEQ(params, [ 6, 5 ])
 
+  @vtLevel(2)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DSRPrinterPort(self):
     """Requests printer status. The allowed responses are:
@@ -60,7 +62,7 @@ class DECDSRTests(object):
     AssertEQ(len(params), 1)
     AssertTrue(params[0] in [ 10, 11, 13, 18, 19 ])
 
-
+  @vtLevel(2)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DSRUDKLocked(self):
     """Tests if user-defined keys are locked or unlocked. The allowed repsonses are:
@@ -76,6 +78,7 @@ class DECDSRTests(object):
     AssertEQ(len(params), 1)
     AssertTrue(params[0] in [ 20, 21 ])
 
+  @vtLevel(2)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DSRKeyboard(self):
     """Gets info about the keyboard. The response is:
@@ -119,6 +122,7 @@ class DECDSRTests(object):
     if len(params) > 3:
       AssertTrue(params[3] in [ 0, 1, 4, 5 ])
 
+  @vtLevel(4)
   def doLocatorStatusTest(self, code):
     """I couldn't find docs on these codes outside xterm. 53 and 55 seem to be
     the same. Returns 50 if no locator, 53 if available."""
@@ -128,14 +132,17 @@ class DECDSRTests(object):
     AssertEQ(len(params), 1)
     AssertTrue(params[0] in [ 50, 53, 55 ])
 
+  @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DSRDECLocatorStatus(self):
     self.doLocatorStatusTest(esccmd.DSRDECLocatorStatus)
 
+  @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DSRXtermLocatorStatus(self):
     self.doLocatorStatusTest(esccmd.DSRXtermLocatorStatus)
 
+  @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_LocatorType(self):
     """Get the type of the locator (pointing device.)
@@ -149,6 +156,7 @@ class DECDSRTests(object):
     AssertTrue(params[1] in [ 0, 1, 2 ])
   # 1 = mouse, 2 = tablet, pretty sure 1 is the only reasonable response.
 
+  @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DECMSR(self):
     """Get space available for macros. This test assumes it's always 0."""
@@ -160,6 +168,7 @@ class DECDSRTests(object):
     AssertEQ(len(params), 1)
     AssertEQ(params[0], 0)
 
+  @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DECCKSR(self):
     """Get checksum of macros. This test assumes it's always 0."""
@@ -167,6 +176,7 @@ class DECDSRTests(object):
     value = escio.ReadDCS()
     AssertEQ(value, "123!~0000")
 
+  @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DSRDataIntegrity(self):
     """Check for link errors. Should always report OK."""
@@ -175,6 +185,7 @@ class DECDSRTests(object):
     AssertEQ(len(params), 1)
     AssertEQ(params[0], 70)
 
+  @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented.")
   def test_DECDSR_DSRMultipleSessionStatus(self):
     """Checks on the status of multiple sessons. SSU refers to some proprietary
