@@ -13,8 +13,7 @@ RIS on change
 class DECSCLTests(object):
   """VT Level 1 doesn't have any distinguishing features that are testable that
   aren't also in level 2."""
-  @vtLevel(2)
-  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
+  @vtLevel(3)
   @knownBug(terminal="iTerm2", reason="iTerm2 doesn't implement DECSCL")
   @knownBug(terminal="iTerm2", reason="iTerm2 doesn't implement DECRQM", shouldTry=False)
   def test_DECSCL_Level2DoesntSupportDECRQM(self):
@@ -34,14 +33,12 @@ class DECSCLTests(object):
       AssertTrue(True)
 
   @vtLevel(2)
-  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
   def test_DSCSCL_Level2Supports7BitControls(self):
     esccmd.DECSCL(62, 1)
     esccmd.CUP(Point(2, 2))
     AssertEQ(GetCursorPosition(), Point(2, 2))
 
-  @vtLevel(4)
-  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
+  @vtLevel(3)
   @knownBug(terminal="iTerm2", reason="Not implemented", shouldTry=False)
   def test_DSCSCL_Level3_SupportsDECRQMDoesntSupportDECSLRM(self):
     # Set level 3 conformance
@@ -85,7 +82,6 @@ class DECSCLTests(object):
     AssertEQ(GetCursorPosition().x(), 6)
 
   @vtLevel(5)
-  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
   @knownBug(terminal="iTerm2", reason="Not implemented", shouldTry=False)
   def test_DECSCL_Level5_SupportsDECNCSM(self):
     # Set level 5 conformance
